tests/lexer/lexer-invalid-error.swg
// ============================================================================
// Lexer Invalid Error
// ============================================================================

// swc-option lex-only

¤ // swc-expected-error {{InvalidCharacter}}
